# tactics

./: CHANGELOG.md  LICENSE  README.md  rewriting.cabal  tactics.cabal
.github/workflows/: haskell.yml
src/: Rewriting.hs
src/Control/: Rewriting.hs
