cabal-version:       2.0
name:                rewriting
version:             0.0.0
synopsis:            A library for strategic rewriting.
description:         A library for strategic rewriting.
homepage:            https://github.com/patrickt/rewriting
bug-reports:         https://github.com/patrickt/rewriting/issues
license:             MIT
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrick.william.thomson@gmail.com
copyright:           2019 Patrick Thomson
category:            Control
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/patrickt/rewriting.git

library
  hs-source-dirs:      src
  exposed-modules:     Rewriting
                       

  build-depends:       base ^>= 4.12.0.0
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

test-suite rewriting-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base ^>= 4.12.0.0
                     , rewriting
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
