cabal-version:       2.0
name:                tactics
version:             0.0.0
synopsis:            A library for strategic rewriting.
description:         A library for strategic rewriting, inspired by Lämmel et al.'s "The Essence of Strategic Programming".
homepage:            https://github.com/patrickt/tactics
bug-reports:         https://github.com/patrickt/tactic/issues
license:             MIT
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrick.william.thomson@gmail.com
copyright:           2019 GitHub
category:            Control
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/patrickt/tactics.git

library
  hs-source-dirs:      src
  exposed-modules:     Control.Rewriting


  build-depends:       base >= 4.12 && < 5
                     , selective >= 0.3
                     , profunctors >= 5.5
                     , recursion-schemes >= 5


  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

test-suite tactics-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base 
                     , tactics


  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
